syntax = "proto3";   
package pb;

enum MessageCommand
{ 
	Unknown=0;
	LinkAuth=1;
    HeartBeat=2; 
	GetUserInfo=3;
};